add js and scss task

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,8 @@
 body {
-	background-color: burlywood;
-	color: goldenrod;
+	color: papayawhip;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.2;
+
+	background-color: darkslategray;
 }
