--- a/src/templates/config/_head.html
+++ b/src/templates/config/_head.html
@@ -34,5 +34,5 @@
 
 	<!-- Custom CSS, JavaScript for this template -->
 	<link rel="stylesheet" href="css/style.css" />
-	<script src="js/script.js" defer></script>
+	<script src="js/app.js" defer></script>
 </head>
