--- a/src/templates/config/_head.html
+++ b/src/templates/config/_head.html
@@ -3,17 +3,13 @@
 	<meta charset="UTF-8" />
 
 	<!-- Mobile Specific Metas -->
-	<meta
-		name="viewport"
-		content="width=device-width, initial-scale=1.0, user-scalable=0"
-	/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
 
 	<!-- Title -->
 	<title>@@title</title>
 
 	<!-- Meta -->
-	@@include("./meta.html", { "Author": "", "Copyright": "", "Address": "",
-	"description": "", "keywords": "" })
+	@@include("./meta.html", { "Author": "", "Copyright": "", "Address": "", "description": "", "keywords": "" })
 
 	<!-- Отключает формирование ссылки у номера телефона и адреса на iOS -->
 	<meta name="format-detection" content="telephone=no" />
@@ -21,16 +17,13 @@
 
 	<!-- iOS Safari -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta
-		name="apple-mobile-web-app-status-bar-style"
-		content="black-transcluent"
-	/>
-
-	<!-- Favicons -->
-	@@include("./favicon.html")
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent" />
 
 	<!-- Fonts -->
 	@@include("./font-preload.html")
+
+	<!-- Favicons -->
+	@@include("./favicon.html")
 
 	<!-- Custom CSS, JavaScript for this template -->
 	<link rel="stylesheet" href="css/style.css" />
