add copy, favicon, pug, seo, sprites tasks

--- a/src/templates/config/_head.html
+++ b/src/templates/config/_head.html
@@ -23,7 +23,7 @@
 	@@include("./font-preload.html")
 
 	<!-- Favicons -->
-	@@include("./favicon.html")
+	@@include("./favicons.html")
 
 	<!-- Custom CSS, JavaScript for this template -->
 	<link rel="stylesheet" href="css/style.css" />
