add js scripts, scrolls files

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,2 +1,14 @@
 @forward 'buttons';
 @forward 'icons';
+@forward 'scrollUp';
+@forward 'scrollIndicatop';
+
+// @forward '';
+// @forward '';
+// @forward '';
+// @forward '';
+// @forward '';
+// @forward '';
+// @forward '';
+// @forward '';
+// @forward '';
