--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -2,8 +2,8 @@
 @forward 'icons';
 @forward 'scrollUp';
 @forward 'scrollIndicatop';
+@forward 'modals';
 
-// @forward '';
 // @forward '';
 // @forward '';
 // @forward '';
