--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -98,3 +98,24 @@
 		content: '';
 	}
 }
+
+// Reset
+@mixin btn-reset {
+	margin: 0;
+	padding: 0;
+
+	background-color: transparent;
+	border: 0;
+	border-radius: 0;
+	outline: 0;
+	cursor: pointer;
+
+	appearance: none;
+}
+
+@mixin list-reset {
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+}
